Chapter12/to-deny-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-pod-deny-me 
spec: 
  containers: 
  - name: nginx 
    image: nginx
