Chapter12/all-open-network-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: allow-all-egress 
spec: 
  podSelector: {} 
  egress: 
  - {} 
  ingress: 
  - {} 
  policyTypes: 
  - Egress 
  - Ingress
