Chapter12/full-restriction-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: full-restriction-policy 
  namespace: development 
spec: 
  policyTypes: 
  - Ingress 
  - Egress 
  podSelector: {}
