Chapter12/label-restriction-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: frontend-network-policy 
spec: 
  podSelector: 
    matchLabels: 
      app: server 
  policyTypes: 
  - Ingress 
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          app: frontend 
    ports: 
    - protocol: TCP 
      port: 80
